<resources>
    <string name="app_name">Snake</string>
    <string name="rank_title">Ranking</string>
    <string name="rank_bt_menu_desc">menu button for ranking page</string>
    <string name="edit">edit</string>
    <string name="rank_seperator_desc">seperator for rank view</string>
    <string name="main_title">Snake Game</string>
    <string name="rank_nodata_start_new_game">Start a new game</string>
    <string name="rank_nodata_text">Cannot find ranking data!</string>
    <string name="rank_nodata_image_desc">no ranking data image</string>
    <string name="main_ranking">Ranking</string>
    <string name="main_load">Load</string>
    <string name="single_play">SINGLE</string>
    <string name="dual_play">DUAL</string>
    <string name="auto_play">AUTO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit">Exit</string>
    <string name="splash_image">splash image</string>
    <string name="ingame_pause_desc">In game, pause button desc</string>
    <string name="resume">Resume</string>
    <string name="save">Save</string>
    <string name="restart">Restart</string>
    <string name="pause">PAUSE</string>
    <string name="you_died">YOU DIED</string>
    <string name="game_over">GAME OVER</string>
    <string name="pause_popup_desc">pause popup desc</string>
    <string name="popup_death_desc">popup death desc</string>
    <string name="scoreDesc">Score: </string>
</resources>