<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#aeff82" >

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/main_title"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:layout_marginTop="100dp" />

    <TextView
        android:id="@+id/main_bt_exit"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        android:paddingVertical="5dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/button_background_with_borders"
        android:text="@string/exit"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/main_bt_ranking"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/main_bt_exit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="20dp"
        android:paddingVertical="5dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/button_background_with_borders"
        android:text="@string/main_ranking"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/main_bt_load"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/main_bt_ranking"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20dp"
        android:paddingVertical="5dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/button_background_with_borders"
        android:text="@string/main_load"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/auto_play"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/main_bt_load"
        android:layout_marginBottom="20dp"
        android:paddingVertical="5dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/button_background_with_borders"
        android:text="@string/auto_play"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/dual_play"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background_with_borders"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/dual_play"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/auto_play"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/single_play"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background_with_borders"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/single_play"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/dual_play"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>