<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <RelativeLayout
        android:id="@+id/rank_layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent" >

        <ImageButton
            android:id="@+id/rank_bt_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_arrow_back_white_48"
            android:contentDescription="@string/rank_bt_menu_desc"/>

        <TextView
            android:id="@+id/rank_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/rank_title"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rank_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_margin="10dp" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/rank_seperator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/rank_layout_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="5dp"
        android:background="@drawable/line"
        android:contentDescription="@string/rank_seperator_desc"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rank_layout_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rank_seperator"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>