<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/popupBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/popup_background" />

    <TextView
        android:id="@+id/popupTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/gomarice_gogono_cocoa_mochi"
        android:text="@string/pause"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/popupResumeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/popupBackground" />

    <Button
        android:id="@+id/popupResumeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_popup_background"
        android:fontFamily="@font/gomarice_gogono_cocoa_mochi"
        android:padding="20sp"
        android:text="@string/resume"
        android:textColor="@color/deep_green"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/popupRestartButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popupTitle" />

    <Button
        android:id="@+id/popupRestartButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_popup_background"
        android:fontFamily="@font/gomarice_gogono_cocoa_mochi"
        android:padding="20sp"
        android:text="@string/restart"
        android:textColor="@color/deep_green"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/popupSaveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popupResumeButton" />

    <Button
        android:id="@+id/popupSaveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_popup_background"
        android:fontFamily="@font/gomarice_gogono_cocoa_mochi"
        android:padding="20sp"
        android:text="@string/save"
        android:textColor="@color/deep_green"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/popupExitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popupRestartButton" />

    <Button
        android:id="@+id/popupExitButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_popup_background"
        android:fontFamily="@font/gomarice_gogono_cocoa_mochi"
        android:padding="20sp"
        android:text="@string/exit"
        android:textColor="@color/deep_green"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popupSaveButton" />


</androidx.constraintlayout.widget.ConstraintLayout>