<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#aeff82"
    tools:context=".GameActivity">

    <Button
        android:id="@+id/pauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hapticFeedbackEnabled="false"
        android:text="@string/pause"
        android:textSize="10sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/resumeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.cauossw.snake.GameView
        android:id="@+id/GameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resumeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resume"
        android:textSize="10sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/restartButton"
        app:layout_constraintEnd_toEndOf="@+id/pauseButton"
        app:layout_constraintStart_toStartOf="@+id/pauseButton"
        app:layout_constraintTop_toBottomOf="@+id/pauseButton" />

    <Button
        android:id="@+id/restartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart"
        android:textSize="10sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/GameView"
        app:layout_constraintEnd_toEndOf="@+id/resumeButton"
        app:layout_constraintStart_toStartOf="@+id/resumeButton"
        app:layout_constraintTop_toBottomOf="@+id/resumeButton" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GameView">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/upButton"
                android:layout_width="50sp"
                android:layout_height="50sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/leftButton"
                android:layout_width="50sp"
                android:layout_height="50sp" />

            <Button
                android:id="@+id/blank"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:visibility="invisible"
                tools:visibility="invisible" />

            <Button
                android:id="@+id/rightButton"
                android:layout_width="50sp"
                android:layout_height="50sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/downButton"
                android:layout_width="50sp"
                android:layout_height="50sp" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>